# cifar-10-speedrun

./: .gitignore  LICENSE  README.md  pyproject.toml
base/: cifar10_speedrun.py
fable-100m/recipes/: e1_1.74s_single-gpu_CHAMPION.py  e2_1.87s_single-gpu.py  e3_1.88s_single-gpu_no-curriculum_9viewTTA.py  e4_1.90s_single-gpu_only.py  e5_1.80s_single-gpu.py
figures/: plot.py
investigations/: 24px-curriculum.md  rescost.py
runners/: README.md  harness.py  run.py  targets.py  validate.py  verify.py
runners/recipes/: e1.py  e5.py  hiverge_base.py
runners/results/: runner_e1a_full32_maxpool3_mega.json  runner_e1a_full32_mega.json  runner_e1a_prog24_s85_n64.json  runner_e1a_prog28_s825_smoke.json  runner_e1a_prog28_s8375_n200.json  runner_e1a_prog28_s85_n64.json  runner_e1a_prog28_s85_smoke.json  runner_e5_full32.json  runner_e5_full32_n200.json  runner_e5_full32_s700_n200.json  runner_e5_full32_s76875_n200.json  runner_e5_full32_s775_n200.json  runner_e5_mild_s825_n200.json  runner_e5_mild_s8375_n200.json  runner_e5_prog24_resmoke.json  runner_e5_prog24_s85_n64b.json  runner_e5_prog24_smoke.json  runner_e5_prog_n200_v2.json  runner_hiverge765_perstep_aug_premat.json  runner_hiverge_nocg.json  runner_iso_full32_s252_eager_n200.json  runner_iso_full32_s252_perstep_n120.json  runner_iso_s240.json  verify_20260623T013222Z.json  verify_20260623T013609Z.json  verify_20260623T020935Z.json
runners/results/20260623T032232Z_hiverge_200/: config.json  summary.json  trials.jsonl
runners/results/20260623T032746Z_hiverge_200/: summary.json  trials.jsonl
(+149 files in other folders)
